# llvm-experiments

./: .gitignore
CountBBinLoop/: CMakeLists.txt
FunctionInfoPass/: CMakeCache.txt  CMakeLists.txt  FunctionInfo.cpp  Makefile  cmake_install.cmake  loop.bc  vararg.bc
FunctionInfoPass/lib/: LLVMFuncInfo.dylib
HelloWorld/: Makefile  dipu.bc  dipu.c  helloWorld.cpp  static.bc  static.c  sum-fn.bc  sum.bc  sum.ll
LocalOpts/: LocalOpts.cpp  Makefile
ObfucatingZero/: CMakeCache.txt  CMakeLists.txt  Makefile  ObfuscatingZero.cpp  cmake_install.cmake
ObfucatingZero/lib/: LLVMObfuscatingZero.dylib
ObfucatingZero/test/: output.bc  output.ll  zeroObfuTest.bc  zeroObfuTest.c  zeroObfuTest.ll
ReadClangDignostics/: ReadClangDiagnostics.cc
printCode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  instrMap.cpp  instrMap.h  optLoads.cpp  printCode.cpp
printCode/lib/: LLVMOptLoads.dylib  LLVMPrintCode.dylib  fib.bc  fib.c  fib.opt  foo.bc  foo.c  foo.ll  foo.opt  foo1.ll  foo2.ll  foo3.bc  sum.bc  sum.c  sum.ll  sum.opt  test.cpp
